<resources>
    <string name="app_name">PDA Project</string>
    <string name="mapMain">MAP</string>
    <string name="ocrMain">OCR</string>
    <string name="exitMain">EXIT</string>
    <string name="printerMain">PRINTER</string>
    <string name="title_activity_google_map">GoogleMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_router">Router</string>
    <string name="title_activity_all_product">AllProduct</string>
    <string name="title_activity_main_product">MainProduct</string>
    <string name="title_activity_new_product">NewProduct</string>
    <string name="title_activity_bar_code">BarCode</string>
    <string name="setting">Setting</string>
    <string name="ocr">Ocr</string>
    <string name="cart">Cart</string>
    <string name="lang">Language</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="version">Version</string>
    <string name="processing">Processing</string>
    <string name="pls_wait">Please wait</string>
    <string name="no_sdcard">Can\'t use SD card.</string>
    <string name="write_file_err">Can\'t write file.</string>
    <string name="auto_update_on">Check update-ON</string>
    <string name="auto_update_off">Check update-OFF</string>
    <string name="update_title">Update Available</string>
    <string name="update_tip">An update for is available!\nDo you want to update now?</string>
    <string name="submit_title">Submit Confirm</string>
    <string name="submit_msg">Do you want to submit now?</string>
    <string name="exit_confirm">Press again to exit</string>
    <string name="lang_title">Choose Language</string>
    <string name="mac">Mac</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="size">Size</string>
    <string name="speed">Speed</string>
    <string name="density">Density</string>
    <string name="sensor">Sensor</string>
    <string name="distance">Distance</string>
    <string name="offset">Offset</string>
    <string name="save">Save</string>
    <string name="database_new">New Product</string>
    <string name="database_update">Update</string>
    <string name="database_delete">Delete</string>
    <string name="table">Table</string>
    <string name="input_table">Input Table</string>
    <string name="id">Id</string>
    <string name="id_product">Id Product</string>
    <string name="row">Row</string>
    <string name="number_row">number row</string>
    <string name="delete_table">Delete Table</string>
    <string name="product">Product</string>
    <string name="id_ware">Id Ware</string>
    <string name="name_ware">Name Ware</string>
    <string name="sold">Sold</string>
    <string name="reserver">Resever</string>
    <string name="stock">Stock</string>
    <string name="liq">Liquidate</string>
    <string name="back">Back</string>
    <string name="map">Map</string>
    <string name="barcode">BarCode</string>
    <string name="inventory_control">INVENTORY CONTROL</string>
    <string name="database">Database</string>
    <string name="myAccount">My Account</string>
    <string name="setting_">SETTING</string>
    <string name="exit_">EXIT</string>
    <string name="ware">Ware</string>
    <string name="group">Group</string>
    <string name="id_group">Id Group</string>
    <string name="name_group">Name Group</string>
    <string name="name_product">Name Product</string>
    <string name="number_sold">Number Sold</string>
    <string name="number_reserver">Number Reserver</string>
    <string name="number_stock">Number Stock</string>
    <string name="number_liq">Number Liquidated</string>
    <string name="my_location">My Location</string>
    <string name="addree_to">Nhập địa điểm đến</string>
    <string name="driving">Driving</string>
    <string name="walking">Walking</string>
    <string name="by_bus">By Bus</string>
    <string name="find">Find</string>
    <string name="status">Status</string>
    <string name="create_product">Create Product</string>
    <string name="search">Search</string>
    <string name="order">Order</string>
    <string name="invoice">Invoice</string>
    <string name="name">Name</string>
    <string name="sold_">Sol:</string>
    <string name="reserver_">Rese</string>
    <string name="stock_">StoT</string>
    <string name="liq_">Liqu</string>
    <string name="home">Home</string>
    <string name="wishlist">WishList</string>
    <string name="invoice_manager">Invoice Manager</string>
    <string name="human_resouce_manager">Human Resource Management</string>
    <string name="order_manager">Order Manager</string>
    <string name="number_0">0</string>
    <string name="search_hint">Search products</string>
    <string name="search_product">Search Product</string>
    <string name="refine">Refine</string>
    <string name="norecords">No product available</string>
    <string name="dealname">Deal Name</string>
    <string name="start_price">$600</string>
    <string name="final_price">$270</string>
    <string name="instock">In Stock</string>
    <string name="add_to_cart">Add To Card</string>
    <string name="share">Share</string>
    <string name="cart_">CART</string>
    <string name="edit">Edit</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="goods">Goods</string>
    <string name="title">Title:</string>
    <string name="snipper">Snippet:</string>
    <string name="address">Address:</string>
    <string name="description">Description:</string>
    <string name="saletool_ecommerce">SaleTool eCommerce</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="quantity">Quantity</string>
    <string name="refresh">Refresh</string>
    <string name="scan_barcode">Scan Barcode Item</string>
    <string name="id_customer">Id Customer</string>
    <string name="name_customer">Name Customer</string>
    <string name="id_order">Id Order</string>
    <string name="id_or">Id Or</string>
    <string name="vat">VAT</string>
    <string name="money">Money(K)</string>
    <string name="submit">Submit</string>
    <string name="print">Print</string>
    <string name="remove">Remove</string>
    <string name="status_ware">Inventory Status</string>
    <string name="offer">Offer Program</string>
    <string name="id_program">Id Program</string>
    <string name="effect">Effect</string>
    <string name="expire">Expire</string>
    <string name="delete">Delete</string>
    <string name="clear_wishlist">ClearWishList</string>
    <string name="warning_clear_cart">Are You Ready Clear All Cart?If clear then all item order is loss </string>
    <string name="register">Register</string>
    <string name="new_account">New Account</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_username">Enter User Name</string>
    <string name="enter_firstname">Enter First Name</string>
    <string name="enter_lastname">Enter Last Name</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_email_address">Email Address</string>
    <string name="enter_confirm_email">Confirm Email</string>
    <string name="user_name">User Name:</string>
    <string name="first_name">First Name:</string>
    <string name="email">Email:</string>
    <string name="last_name">Last Name:</string>
    <string name="confirm">Confirm Email:</string>
    <string name="pass_word">Password:</string>
    <string name="zip_code">Zip/Postal Code:</string>
    <string name="enter_zipcode">Enter Zip/Postal Code</string>
    <string name="create_account">Create Account</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="phone_number">Phone Number:</string>
    <string name="login">Login</string>
    <string name="goodsreceipt">Goods Receipt</string>
    <string name="shop">Shop</string>
    <string name="add">Add</string>
    <string name="input_barcode">In Bar</string>
    <string name="partner_location">PartnerLocation</string>
    <string name="PLoca_ID">PLoca_ID</string>
    <string name="PLoca_Code">PLoca_Code</string>
    <string name="Partner_ID">Partner_ID</string>
    <string name="PLoca_Type">PLoca_Type</string>
    <string name="PLoca_Name">PLoca_Name</string>
    <string name="PLoca_Address">PLoca_Address</string>
    <string name="Place_ID">Place_ID</string>
    <string name="Longitude">Longitude</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="For">For</string>
    <string name="five">Five</string>
    <string name="goodsissue">Goods Issue</string>
    <string name="goodreceipt">Goods Receipt</string>
    <string name="inventory">Inventory</string>
    <string name="rate">Rate</string>
    <string name="rate6">6</string>
    <string name="rate7">7</string>
    <string name="rate8">8</string>
    <string name="rate9">9</string>
    <string name="rate10">10</string>
    <string name="criteria">Criteria</string>
    <string name="business">Business</string>
    <string name="sku_code">SKU</string>
    <string name="sku_code_input">Input SKU Code</string>
    <string name="view">View</string>
    <string name="send">Send</string>
    <string name="date">Date</string>
    <string name="key1">/</string>
    <string name="input_day">Input Day</string>
    <string name="input_month">Input Month</string>
    <string name="input_year">Input Year</string>
    <string name="detail">Detail</string>
    <string name="update">Update</string>
    <string name="phone">Phone</string>
    <string name="updateBarcode">Update Barcode</string>
    <string name="updateSku">Update Sku Items</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign Out</string>
    <string-array name="lang_list">
        <item>English</item>
        <item>Simplified Chinese</item>
        <item>Traditional Chinese</item>
    </string-array>
    <string name="save_msg">Save successfully, file name is</string>
    <string name="title_activity_edit_product">EditProduct</string>
    <string name="title_activity_delete_database">DeleteDatabase</string>
    <string name="title_activity_config_printer">ConfigPrinter</string>
    <string name="title_activity_goods_search">GoodsSearch</string>
    <string name="title_activity_sale">Sale</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_delete_table">DeleteTable</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_sale_tool">SaleTool</string>
    <string name="title_activity_search_for_barcode">SearchForBarcode</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_resgisty">Resgisty</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_good_receipt">GoodReceipt</string>
    <string name="title_activity_goods_receipt">GoodsReceipt</string>
    <string name="title_activity_goods_issue">GoodsIssue</string>
    <string name="title_activity_offer_customer">OfferCustomer</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_rate">Rate</string>
    <string name="title_activity_puckshop">Puckshop</string>
    <string name="title_activity_business">Business</string>
    <string name="title_activity_goodissue">Goodissue</string>
    <string name="title_activity_bussiness">Bussiness</string>
    <string name="title_activity_goods_reseipt">GoodsReseipt</string>
    <string name="title_activity_load_databases">LoadDatabases</string>
</resources>