<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.c9.lab411.printerTSCAlpla3R.ConfigPrinter" >
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    <TextView 
	    android:id="@+id/tv1"
	    android:layout_width="@dimen/textvew_width_1"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/text_size_1"
	    android:text="@string/mac"/>
		<Spinner
		android:id="@+id/macSp"
		android:layout_width="250dp"
		android:layout_height="@dimen/spinner_height_1" />
	</LinearLayout>
		<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <TextView 
	    android:id="@+id/tv2"
	    android:layout_width="@dimen/textvew_width_1"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/text_size_1"
	    android:text="@string/width"/>

		<Spinner
		android:id="@+id/widthSp"
		android:layout_width="@dimen/spinner_width_1"
		android:layout_height="@dimen/spinner_height_1" />
		<TextView 
	    android:id="@+id/tv2_"
	    android:layout_width="@dimen/textvew_width_1"
	    android:layout_height="wrap_content"
	    
	    android:textSize="@dimen/text_size_1"
	    android:text="@string/height"/>
		<Spinner
		android:id="@+id/heightSp"
		android:layout_width="@dimen/spinner_width_1"
		android:layout_height="@dimen/spinner_height_1" />
	</LinearLayout>

	<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <TextView 
	    android:id="@+id/tv3"
	    android:layout_width="@dimen/textvew_width_1"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/text_size_1"
	    android:text="@string/size"/>

		<Spinner
		android:id="@+id/sizeSp"
		android:layout_width="@dimen/spinner_width_1"
		android:layout_height="@dimen/spinner_height_1" />
		<TextView 
	    android:id="@+id/tv4"
	    android:layout_width="@dimen/textvew_width_1"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/text_size_1"
	    android:text="@string/speed"/>
		<Spinner
		android:id="@+id/speedSp"
		android:layout_width="@dimen/spinner_width_1"
		android:layout_height="@dimen/spinner_height_1" />
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <TextView 
	    android:id="@+id/tv5"
	    android:layout_width="@dimen/textvew_width_1"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/text_size_1"
	    android:text="@string/density"/>

		<Spinner
		android:id="@+id/densitySp"
		android:layout_width="@dimen/spinner_width_1"
		android:layout_height="@dimen/spinner_height_1" />
		<TextView 
	    android:id="@+id/tv6"
	    android:layout_width="@dimen/textvew_width_1"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/text_size_1"
	    android:text="@string/sensor"/>
		
		<Spinner
		android:id="@+id/sensorSp"
		android:layout_width="@dimen/spinner_width_1"
		android:layout_height="@dimen/spinner_height_1" />
	</LinearLayout>
		<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <TextView 
	    android:id="@+id/tv7"
	    android:layout_width="@dimen/textvew_width_1"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/text_size_1"
	    android:text="@string/distance"/>

		<Spinner
		android:id="@+id/distanceSp"
		android:layout_width="@dimen/spinner_width_1"
		android:layout_height="@dimen/spinner_height_1" />
		<TextView 
	    android:id="@+id/tv8"
	    android:layout_width="@dimen/textvew_width_1"
	    android:layout_height="wrap_content"
	    android:textSize="@dimen/text_size_1"
	    android:text="@string/offset"/>
		
		<Spinner
		android:id="@+id/offsetSp"
		android:layout_width="@dimen/spinner_width_1"
		android:layout_height="@dimen/spinner_height_1" />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <Button 
	    android:id="@+id/saveSetting"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:text="@string/save"/>
	    <Button 
	    android:id="@+id/cancelSetting"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:text="@string/cancel"/>
	</LinearLayout>


</LinearLayout>
