<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context="edu.c9.lab411.account.Registy" >
	<include
	    android:id="@+id/banner"
	    android:layout_alignParentTop="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    layout="@layout/banner_register"
	    />
	<ScrollView 
	    android:id="@+id/layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/banner"
	    android:scrollbars="vertical">
	    
	   <LinearLayout
	       android:id="@+id/layout1"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:orientation="vertical"
	       >
			<TextView 
		        android:layout_width="fill_parent"
		        android:textSize="20sp"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/margin_left" 
		        android:layout_marginTop="@dimen/margin_top_1"
		        android:text="@string/user_name"/>
		    <EditText 
				android:textSize="@dimen/text_size_2" 
				android:layout_height="40.0dip" 
				android:layout_marginLeft="@dimen/margin_left"
				android:layout_marginRight="@dimen/margin_right"
				android:layout_width="fill_parent"
				android:textColor="@color/black" 
				android:id="@+id/username" 
				android:background="@color/white" 
				android:paddingLeft="@dimen/padding_left" 
				android:focusable="true" 
				android:maxLines="1"
				android:paddingRight="5.0dip"
				android:hint="@string/enter_username" 
				android:layout_weight="0.9"  />
			<TextView 
		        android:layout_width="fill_parent"
		        android:textSize="20sp"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/margin_left" 
		        android:layout_marginTop="@dimen/margin_top_1"
		        android:text="@string/pass_word"/>
		    <EditText 
				android:textSize="@dimen/text_size_2" 
				android:layout_height="40.0dip" 
				android:layout_marginLeft="@dimen/margin_left"
				android:layout_marginRight="@dimen/margin_right"
				android:layout_width="fill_parent"
				android:textColor="@color/black" 
				android:id="@+id/password" 
				android:background="@color/white" 
				android:inputType="textPassword"
				android:paddingLeft="@dimen/padding_left" 
				android:focusable="true" 
				android:maxLines="1"
				android:paddingRight="5.0dip"
				android:hint="@string/enter_pass" 
				android:layout_weight="0.9"  />	
			<TextView 
		        android:layout_width="fill_parent"
		        android:textSize="20sp"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/margin_left" 
		        android:layout_marginTop="@dimen/margin_top_1"
		        android:text="@string/first_name"/>
		    <EditText 
				android:textSize="@dimen/text_size_2" 
				android:layout_height="40.0dip" 
				android:layout_marginLeft="@dimen/margin_left"
				android:layout_marginRight="@dimen/margin_right"
				android:layout_width="fill_parent"
				android:textColor="@color/black" 
				android:id="@+id/firstname" 
				android:background="@color/white" 
				android:inputType="none"
				android:paddingLeft="@dimen/padding_left" 
				android:focusable="true" 
				android:maxLines="1"
				android:paddingRight="5.0dip"
				android:hint="@string/enter_firstname" 
				android:layout_weight="0.9"  />	
			<TextView 
		        android:layout_width="fill_parent"
		        android:textSize="20sp"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/margin_left" 
		        android:layout_marginTop="@dimen/margin_top_1"
		        android:text="@string/last_name"/>
		    <EditText 
				android:textSize="@dimen/text_size_2" 
				android:layout_height="40.0dip" 
				android:layout_marginLeft="@dimen/margin_left"
				android:layout_marginRight="@dimen/margin_right"
				android:layout_width="fill_parent"
				android:textColor="@color/black" 
				android:id="@+id/lastname" 
				android:background="@color/white" 
				android:inputType="none"
				android:paddingLeft="@dimen/padding_left" 
				android:focusable="true" 
				android:maxLines="1"
				android:paddingRight="5.0dip"
				android:hint="@string/enter_lastname" 
				android:layout_weight="0.9"  />
			<TextView 
		        android:layout_width="fill_parent"
		        android:textSize="20sp"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/margin_left" 
		        android:layout_marginTop="@dimen/margin_top_1"
		        android:text="@string/address"/>
		    <EditText 
				android:textSize="@dimen/text_size_2" 
				android:layout_height="40.0dip" 
				android:layout_marginLeft="@dimen/margin_left"
				android:layout_marginRight="@dimen/margin_right"
				android:layout_width="fill_parent"
				android:textColor="@color/black" 
				android:id="@+id/address_" 
				android:background="@color/white" 
				android:inputType="none"
				android:paddingLeft="@dimen/padding_left" 
				android:focusable="true" 
				android:maxLines="1"
				android:paddingRight="5.0dip"
				android:hint="@string/enter_address" 
				android:layout_weight="0.9"  />	
			<TextView 
		        android:layout_width="fill_parent"
		        android:textSize="20sp"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/margin_left" 
		        android:layout_marginTop="@dimen/margin_top_1"
		        android:text="@string/phone_number"/>
		    <EditText 
				android:textSize="@dimen/text_size_2" 
				android:layout_height="40.0dip" 
				android:layout_marginLeft="@dimen/margin_left"
				android:layout_marginRight="@dimen/margin_right"
				android:layout_width="fill_parent"
				android:textColor="@color/black" 
				android:id="@+id/phonenumber" 
				android:background="@color/white" 
				android:inputType="phone"
				android:paddingLeft="@dimen/padding_left" 
				android:focusable="true" 
				android:maxLines="1"
				android:paddingRight="5.0dip"
				android:hint="@string/enter_phone" 
				android:layout_weight="0.9"  />		    
			<TextView 
		        android:layout_width="fill_parent"
		        android:textSize="20sp"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/margin_left" 
		        android:layout_marginTop="@dimen/margin_top_1"
		        android:text="@string/email"/>
		    <EditText 
				android:textSize="@dimen/text_size_2" 
				android:layout_height="40.0dip" 
				android:layout_marginLeft="@dimen/margin_left"
				android:layout_marginRight="@dimen/margin_right"
				android:layout_width="fill_parent"
				android:textColor="@color/black" 
				android:id="@+id/email_" 
				android:background="@color/white" 
				android:inputType="textEmailAddress"
				android:paddingLeft="@dimen/padding_left" 
				android:focusable="true" 
				android:maxLines="1"
				android:paddingRight="5.0dip"
				android:hint="@string/enter_email_address" 
				android:layout_weight="0.9"  />	
			<TextView 
		        android:layout_width="fill_parent"
		        android:textSize="20sp"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/margin_left" 
		        android:layout_marginTop="@dimen/margin_top_1"
		        android:text="@string/confirm"/>
		    <EditText 
				android:textSize="@dimen/text_size_2" 
				android:layout_height="40.0dip" 
				android:layout_marginLeft="@dimen/margin_left"
				android:layout_marginRight="@dimen/margin_right"
				android:layout_width="fill_parent"
				android:textColor="@color/black" 
				android:id="@+id/confirm_email" 
				android:background="@color/white" 
				android:inputType="textEmailAddress"
				android:paddingLeft="@dimen/padding_left" 
				android:focusable="true" 
				android:maxLines="1"
				android:paddingRight="5.0dip"
				android:hint="@string/enter_confirm_email" 
				android:layout_weight="0.9"  />
			<TextView 
		        android:layout_width="fill_parent"
		        android:textSize="20sp"
		        android:textColor="@color/white"
		        android:layout_height="wrap_content"
		        android:paddingLeft="@dimen/margin_left" 
		        android:layout_marginTop="@dimen/margin_top_1"
		        android:text="@string/zip_code"/>
		    <EditText 
				android:textSize="@dimen/text_size_2" 
				android:layout_height="40.0dip" 
				android:layout_marginLeft="@dimen/margin_left"
				android:layout_marginRight="@dimen/margin_right"
				android:layout_width="fill_parent"
				android:textColor="@color/black" 
				android:id="@+id/zip_postal_code" 
				android:background="@color/white" 
				android:inputType="number"
				android:paddingLeft="@dimen/padding_left" 
				android:focusable="true" 
				android:maxLines="1"
				android:paddingRight="5.0dip"
				android:hint="@string/enter_zipcode" 
				android:layout_weight="0.9"  />	
			<Button 
			    android:id="@+id/create_account"
			    android:layout_width="fill_parent"
			    android:layout_height="@dimen/height_banner"
			    android:background="@drawable/searchbtn"
			    android:text="@string/create_account"
			    android:layout_marginTop="@dimen/margin_top_1"
			    android:textSize="@dimen/test_size_3" 
			    android:textColor="@color/white" 
			    android:onClick="CreateAccount"
			    />			    							    										    
	   </LinearLayout>
	</ScrollView>


</RelativeLayout>
