<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_view"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PLoca_ID"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/PLoca_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PLoca_Code"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/PLoca_Code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Partner_ID"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/Partner_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PLoca_Type"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/PLoca_Type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PLoca_Name"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/PLoca_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PLoca_Address"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/PLoca_Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Place_ID"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

    <TextView
        android:id="@+id/Place_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_2" />

</LinearLayout>