<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/firsttext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginLeft="@dimen/margin_left_2"
        android:textSize="@dimen/text_size_2"
        android:text="@string/first" >
    </TextView>

    <TextView
        android:id="@+id/secondtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/second" >
    </TextView>

    <TextView
        android:id="@+id/thirdtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/third" >
  </TextView>

</LinearLayout>