<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context="edu.c9.lab411.controller.Bussiness" >

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green" >

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_good_issue"
                android:layout_width="@dimen/button_width_1"
                android:layout_height="@dimen/button_height_1"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/btn1_bg"
                android:onClick="goodIssue"
                android:text="@string/goodsissue"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_goodreceipt"
                android:layout_width="@dimen/button_width_1"
                android:layout_height="@dimen/button_height_1"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/btn1_bg"
                android:onClick="goodReceipt"
                android:text="@string/goodreceipt"
                android:textColor="@color/black" />
             <Button
                android:id="@+id/btn_order"
                android:layout_width="@dimen/button_width_1"
                android:layout_height="@dimen/button_height_1"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/btn1_bg"
                android:onClick="goodOrder"
                android:text="@string/order"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_inventoy"
                android:layout_width="@dimen/button_width_1"
                android:layout_height="@dimen/button_height_1"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/btn1_bg"
                android:onClick="inventory"
                android:text="@string/inventory"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_rate"
                android:layout_width="@dimen/button_width_1"
                android:layout_height="@dimen/button_height_1"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/btn1_bg"
                android:onClick="rate"
                android:text="@string/rate"
                android:textColor="@color/black" >
            </Button>

            <Button
                android:id="@+id/btn_offer"
                android:layout_width="@dimen/button_width_1"
                android:layout_height="@dimen/button_height_1"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/btn1_bg"
                android:onClick="offerGoods"
                android:text="@string/offer"
                android:textColor="@color/black" >
            </Button>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>